syntax = "proto3";

package temporal.server.api.persistence.v1;
option go_package = "go.temporal.io/server/api/persistence/v1;persistence";

import "temporal/api/enums/v1/common.proto";
import "temporal/api/version/v1/message.proto";

// data column
message ClusterMetadata {
    string cluster_name = 1;
    int32 history_shard_count = 2;
    string cluster_id = 3;
    temporal.api.version.v1.VersionInfo version_info = 4;
    map<string,temporal.server.api.persistence.v1.IndexSearchAttributes> index_search_attributes = 5;
    string cluster_address = 6;
    string http_address = 13;
    int64 failover_version_increment = 7;
    int64 initial_failover_version = 8;
    bool is_global_namespace_enabled = 9;
    bool is_connection_enabled = 10;
    bool use_cluster_id_membership = 11;
    map<string,string> tags = 12;
}

message IndexSearchAttributes{
    map<string,temporal.api.enums.v1.IndexedValueType> custom_search_attributes = 1;
}
